# led-matrix-rs

./: .ignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/bsp/: Cargo.toml
crates/bsp/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: gui.rs  lib.rs
crates/led-matrix-bsp/: Cargo.toml
crates/led-matrix-bsp/src/: lib.rs
crates/led-matrix-core/src/: lib.rs
crates/led-matrix-gui/: Cargo.toml
crates/led-matrix-gui/src/: lib.rs
crates/led-matrix-tui/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
dev/scripts/: deploy_documentation.sh
examples/: billboard.rs  bitmaps.rs  color_wave.rs  input.rs  inputs.rs  text.rs
src/: billboard.rs  character.rs  lib.rs  main.rs
src/character/: table.rs
zhaw-led-matrix/: Cargo.toml
zhaw-led-matrix-bsp/: Cargo.toml
zhaw-led-matrix-bsp/src/: lib.rs
zhaw-led-matrix-core/: Cargo.toml
zhaw-led-matrix-core/src/: lib.rs
zhaw-led-matrix-emulator/: Cargo.toml
zhaw-led-matrix-emulator/src/: lib.rs
zhaw-led-matrix/examples/: color_wave.rs  inputs.rs
zhaw-led-matrix/src/: lib.rs
