[package]
name = "zhaw-led-matrix-bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
