[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Remo Senekowitsch <senk@zhaw.ch>"]
description = "Rust library for programming the ZHAW LED-matrix"
readme = "README.md"
repository = "https://github.zhaw.ch/senk/led-matrix-rs"
license = "MIT"

# don't publish unnecessary files to crates.io
exclude = [".jj", ".cargo", "dev"]

[workspace.dependencies]
cortex-m-rt = "0.7.3"
led-matrix-bsp = { version = "0.1.0", path = "crates/bsp" }
led-matrix-core = { version = "0.1.0", path = "crates/core" }
led-matrix-gui = { version = "0.1.0", path = "crates/gui" }
led-matrix-tui = { version = "0.1.0", path = "crates/tui" }
panic-halt = "0.2.0"
rp-pico = "0.9.0"

[package]
name = "led-matrix"
version = { workspace = true }
edition = { workspace = true }

[features]
tui = ["dep:led-matrix-tui"]

[dependencies]
led-matrix-core = { workspace = true }

[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
rp-pico = { workspace = true }
led-matrix-bsp = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
led-matrix-gui = { workspace = true }
led-matrix-tui = { workspace = true, optional = true }

# optimize build for small binary size
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
