[package]
name = "zhaw-led-matrix-bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
zhaw-led-matrix-core = { version = "0.1.0", path = "../zhaw-led-matrix-core" }
