[package]
name = "zhaw-led-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
zhaw-led-matrix-core = { version = "0.1.0", path = "../zhaw-led-matrix-core" }

[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = "0.7.4"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
zhaw-led-matrix-bsp = { version = "0.1.0", path = "../zhaw-led-matrix-bsp" }

[target.'cfg(not(target_os = "none"))'.dependencies]
zhaw-led-matrix-emulator = { version = "0.1.0", path = "../zhaw-led-matrix-emulator" }

# optimize build for small binary size
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
