[package]
name = "led-matrix-bsp"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true}
description = { workspace = true}
readme = { workspace = true}
repository = { workspace = true}
license = { workspace = true}

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { workspace = true }
embedded-hal = "1.0.0"
led-matrix-core = { workspace = true }
rp-pico = { workspace = true }
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
