[package]
name = "led-matrix-gui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true}
description = { workspace = true}
readme = { workspace = true}
repository = { workspace = true}
license = { workspace = true}

[dependencies]
eframe = "0.29.1"
led-matrix-core = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
