[package]
name = "led-matrix-bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { workspace = true }
embedded-hal = "1.0.0"
led-matrix-core = { workspace = true }
panic-halt = { workspace = true }
rp-pico = { workspace = true }
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
