[package]
name = "led-matrix-tui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true}
description = { workspace = true}
readme = { workspace = true}
repository = { workspace = true}
license = { workspace = true}

[dependencies]
crossterm = "0.27.0"
led-matrix-core = { workspace = true }
ratatui = "0.26.2"
